realizando mais ajustes e terminando cruds de cada entidade